--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
         ports:
             - 81:80
         volumes:
-            - ./elk/logstash:/etc/logstash
+            - ./elk/logstash:/etc/logstash/conf.d
             - ./elk/logstash/patterns:/opt/logstash/patterns
         volumes_from:
             - php
