Added new logstash repo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,13 +26,13 @@ services:
             - php
         volumes:
             - ./logs/nginx/:/var/log/nginx
-#    elk:
-#        image: willdurand/elk:kibana-5.x
-#        ports:
-#            - 81:80
-#        volumes:
-#            - ./elk/logstash:/etc/logstash/conf.d
-#            - ./elk/logstash/patterns:/opt/logstash/patterns
-#        volumes_from:
-#            - php
-#            - nginx
+    elk:
+        image: playmice/docker-elk
+        ports:
+            - 81:80
+        volumes:
+            - ./elk/logstash:/etc/logstash/conf.d
+            - ./elk/logstash/patterns:/opt/logstash/patterns
+        volumes_from:
+            - php
+            - nginx
