--- a/elk/logstash/logstash.conf
+++ b/elk/logstash/logstash.conf
@@ -32,7 +32,6 @@ filter {
 }
 
 output {
-  elasticsearch {
-    host => "localhost"
-  }
+  elasticsearch { hosts => ["localhost:9200"] }
+  stdout { codec => rubydebug }
 }
