Updated logstash output configs

--- a/elk/logstash/logstash.conf
+++ b/elk/logstash/logstash.conf
@@ -19,13 +19,13 @@ input {
 filter {
   if [type] == "nginx_access" {
     grok {
-      patterns_dir => ["./patterns"]
+      patterns_dir => ["/opt/logstash/patterns"]
       match => { "message" => "%{NGINXACCESS}"}
     }
   }
   else if [type] in ["symfony_dev", "symfony_prod"] {
     grok {
-      patterns_dir => ["./patterns"]
+      patterns_dir => ["/opt/logstash/patterns"]
       match => { "message" => "%{SYMFONY}"}
     }
   }
