Updated docker-composer.yml to v3

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
             - ./logs/symfony:/var/www/symfony/var/log
     nginx:
         build: nginx
-        ports:
-            - 80:80
+#        ports:
+#            - 80:80
         volumes_from:
             - php
         volumes:
