--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
         build: nginx
 #        ports:
 #            - 80:80
+#        volumes_from:
+#            - php
         volumes:
             - ./logs/nginx/:/var/log/nginx
         environment:
@@ -38,9 +40,9 @@ services:
         volumes:
             - ./elk/logstash:/etc/logstash/conf.d
             - ./elk/logstash/patterns:/opt/logstash/patterns
-        volumes_from:
-            - php
-            - nginx
+#        volumes_from:
+#            - php
+#            - nginx
 
 networks:
   default:
