--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,9 @@ services:
             VIRTUAL_HOST: docker1.elijahoyekunle.com
             LETSENCRYPT_HOST: docker1.elijahoyekunle.com
             LETSENCRYPT_EMAIL: eloyekunle@gmail.com
+        expose:
+            - "80"
+            - "443"
     elk:
         build: 'https://github.com/playmice/docker-elk.git'
         ports:
